# custom-chess-engine

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  ai_player.py  engine.py  engine_test.py  interface.py  material.py  move.py  player.py  profile_game.py  pyproject.toml  run_app.py  settings.py
.github/workflows/: black_action.yml  ci.yaml  release.yaml
envs/: environment.txt  requirements-dev.txt
own_illustrations/: _brouillon_illus.pptx
pyalapin/: __init__.py  output.pstats  setup.py
pyalapin/engine/: __init__.py  color.py  engine.py  material.py  move.py
pyalapin/interface/: __init__.py  color_edition.py  colorize.py  interface.py
pyalapin/player/: ai_player.py  my_player.py  player.py  stockfish_player.py
pyalapin/utils/: profile_game.py
python/engine/: color.py  engine.py  material.py  move.py
python/interface/: interface.py
python/player/: ai_player.py  my_player.py  player.py
python/utils/: images_creation.py  profile_game.py  training_ai.py
tests/: engine_test.py  prev_engine_test.py  stockfish_localtest.py  stockfish_tes.py
tests/unit_test/: engine_test.py  test_material.py
utils/: colorize.py  create_base.py  create_figures.py  images_creation.py  profile_game.py
