[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyalapin"
version = "1.0.0"
authors = [
  { name = "Vincent Auriau", email = "vincent.auriau.dev@gmail.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

description = "Custom chess engine built specifically to develop AIs"
keywords = ["chess", "ai", "interface"]
dependencies = [
    "numpy"
]
requires-python = ">=3.8"
[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "kivy", "stockfish"]

[project.urls]
Homepage = "https://github.com/VincentAuriau/custom-chess-engine"
homepage = "https://github.com/VincentAuriau/custom-chess-engine"

[tool.setuptools.packages.find]
include=["pyalapin*"]
namespaces=false
